Refactor checkingAccount compound interest to iterate through dates